--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
     </section>
 
     <!-- "reach out" section-->
-    <section id="reach-out">
-        <h2>Reach Out</h2> 
+    <section id="reach-out" class="contact">
+        <h2 class="section-title secondary-border">Reach Out</h2> 
         <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3443.002051072846!2d-97.60410488530451!3d30.350891610986576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644c7d2eb8f0e3d%3A0x56f68d1cb7beb2ca!2s7501%20Saginaw%20Dr%2C%20Manor%2C%20TX%2078653!5e0!3m2!1sen!2sus!4v1624838668763!5m2!1sen!2sus" 
             width="400" 
@@ -157,7 +157,7 @@
             allowfullscreen="" 
             loading="lazy">
             </iframe>
-        </div>
+        
 
         <div>
             <h3>Run Buddy</h3>
@@ -174,6 +174,7 @@
                 E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
               </address>
         </div>
+    </div>
     </section>
         
     <!-- footer -->
