add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
                 </button>
             </form>
         </div>
+
+        <div class="hero-cta">
+            <h2>Start Building Habits.</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolore odit omnis dolores est error ipsum amet pariatur deserunt qui, tempora molestiae cupiditate reiciendis. Nihil culpa quibusdam sunt saepe tenetur?
+            </p>
+        </div>
     </section>  
     <!-- end hero-->
 
