--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolore odit omnis dolores est error ipsum amet pariatur deserunt qui, tempora molestiae cupiditate reiciendis. Nihil culpa quibusdam sunt saepe tenetur?
             </p>
         </div>
-        
+
         <div class="hero-form">
             <h3>Get Started Today</h3>
             <p>Fill out this form and one of our trainers will schedule a consult</p>
@@ -77,45 +77,87 @@
 
     <!-- "what we do" section -->
     <section id="what-we-do" class="intro">
-        <h2 class="section-title primary-border">What We Do</h2>
-        <p>
-            butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+        <div class="flex-row">
+            <h2 class="section-title primary-border">
+                What We Do
+            </h2>
+        </div>
+        <div class="flex-row">
+            <p>
+                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
 
-        </p>
+            </p>
+        </div>
     </section>
 
     <!-- "what you do" section -->
     <section id="what-you-do" class="steps">
-        <h2 class="section-title secondary-border">What You Do</h2>
-
-        <div>
-            <img src="./assets/images/step-1.svg" alt="">
-            <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
-            <p>You're already here, so why not?</p>
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">
+                What You Do
+            </h2>
         </div>
 
-        <div>
-            <img src="./assets/images/step-2.svg" alt="">
-            <h3>Step 2: <span>Consult with One of Our Trainer.</span></h3>
-            <p>Are you here to build muscle, lose weight, or just feel good?</p>
+        <div class="step">
+            <h3>Step 1.</h3> 
+            <div class="step-info">
+                <div class="step-img">
+                    <img src="./assets/images/step-1.svg" alt="">
+                </div>
+                <div class="step-text">
+                    <h4>Fill Out the Form Above.</h4>
+                    <p>You're already here, so why not?</p>
+                </div>
+            </div>
         </div>
 
-        <div>
-            <img src="./assets/images/step-3.svg" alt="">
-            <h3>Step 3: <span>Get Running.</span></h3>
-            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+        <div class="step">
+            <h3> Step 2.</h3>
+            <div class="step-info">
+                <div class="step-img">
+                    <img src="./assets/images/step-2.svg" alt="">
+                </div>
+                <div class="step-text">
+                    <h4>Consult with One of Our Trainer.</h4>
+                    <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="step">
+            <h3>Step 3.</h3>
+            <div class="step-info">
+                <div class="step-img">
+                    <img src="./assets/images/step-3.svg" alt="">
+                </div>
+                <div class="step-text">
+                    <h4>Get Running.<h4>
+                    <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+                </div>
+            </div>
         </div>
         
-        <div>
-            <img src="./assets/images/step-4.svg" alt="">
-            <h3>Step 4: <span>See Results.</span></h3>
-            <p>Bi-weekly checkins with your trainer will keep you focused</p>
+        <div class="step">
+            <h3>Step 4.</h3>
+            <div class="step-info">
+                <div class="step-img">
+                    <img src="./assets/images/step-4.svg" alt="">
+                </div>
+                <div class="step-text">
+                    <h4>See Results.</h4>
+                    <p>Bi-weekly checkins with your trainer will keep you focused</p>
+                </div>
+            </div>
         </div>
     </section>
 
     <!-- "meet the trainers" section-->
     <section id="your-trainers" class="trainers">
-        <h2 class="section-title primary-border">Meet The Trainers</h2>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">
+                Meet The Trainers
+            </h2>
+        </div>
 
         <!-- first trainer bio-->
         <article class="trainer">
@@ -156,7 +198,12 @@
 
     <!-- "reach out" section-->
     <section id="reach-out" class="contact">
-        <h2 class="section-title secondary-border">Reach Out</h2> 
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">
+                Reach Out
+            </h2> 
+        </div>
+
         <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3443.002051072846!2d-97.60410488530451!3d30.350891610986576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644c7d2eb8f0e3d%3A0x56f68d1cb7beb2ca!2s7501%20Saginaw%20Dr%2C%20Manor%2C%20TX%2078653!5e0!3m2!1sen!2sus!4v1624838668763!5m2!1sen!2sus" 
             width="400" 
