--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
  <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Run Buddy</title>
-
     <link rel="stylesheet" href="./assets/css/style.css">
-</head>
+
+ </head>
 <body>
     <!-- navigation -->
     <header>
@@ -14,11 +14,8 @@
             <a href="/">RUN BUDDY</a> 
         </h1>
         <nav>
-            <!-- Unordered list element -->
             <ul>
-                <!-- List item element -->
                 <li>
-                    <!-- List item Element -->
                     <a href="#what-we-do">What We Do</a>
                 </li>
                 <li>
