fix link in header

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+</head>
 
- </head>
 <body>
     <!-- navigation -->
     <header>
         <h1>
-            <a href="/">RUN BUDDY</a> 
+            <a href="./index.html">RUN BUDDY</a> 
         </h1>
         <nav>
             <ul>
@@ -29,7 +29,6 @@
                 </li>
             </ul>
         </nav>
-        
     </header>
 
     <!-- hero/jumbotron-->
